# eagle

./: .gitignore  LICENSE  Makefile  README.md
apps/Resnet50/Inference/: resnet50_inference_README.md  resnet50_run_inference.sh
apps/Resnet50/Training/: resnet50_download_preprocess.sh  resnet50_preprocess_only.sh  resnet50_run_training.sh  resnet50_run_training_README.md
apps/bert-inference/: README.md  inference.py
apps/bert-training/: README.MD  cmds.txt  model_shape.py
apps/rnnt-training/: README_EAGLE.md  run.sh  train.py  train_cpu.py
apps/rnnt-training/common/: QSL.py  helpers.py  rnn.py
apps/rnnt-training/configs/: baseline_v3-1023sp.yaml  (+1 more)
apps/unet/: unet_preprocess_training_data.sh  unet_run_training.sh  unet_setup_download_raw_data.sh
buildsys/: build-app.mk  build-devlib.mk  build-lib.mk  build.mk  install-app.mk  install-hdrs.mk  install-libs.mk  install.mk
electron/electron-test/: Makefile
electron/electron-tf/: .gitignore  Makefile  README.md
electron/electron-torch/: CMakeLists.txt  README.md
electron/electron-torch/src/: electronAten.cpp  electronAten.h  electronOpaqueTensorImpl.cpp  registraton.cpp  setup.py  utils.cpp  utils.h
electron/electron-torch/test/: CMakeLists.txt  add_op.cpp  add_op_cpu.cpp  test_add.py
electron/libelectron/: Makefile
photon/libphoton/: Makefile
quark/: .gitignore  README.md  tc_fsm.sv  tc_fsm_interfaces.sv
quark/tc_fsm_modules/: mra_controller.sv  sn_controller.sv
upcycle/: Makefile
upcycle/public/: upcycle-api.hh  upcycle-intrin.hh
upcycle/upcycle/: upcycle-api.hh  upcycle-intrin.hh
(+137 files in other folders)
